tests/neg/i8569a.check
-- [E083] Type Error: tests/neg/i8569a.scala:13:14 ---------------------------------------------------------------------
13 |  val x = new outer2.Inner(2) // error (at typer)
   |              ^^^^^^
   |              (Test.outer2 : => Outer2) is not a valid type prefix, since it is not an immutable path
   |
   | longer explanation available when compiling with `-explain`
